added bom to build